--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Social Hub X BD - Premium SMM Panel</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -33,6 +33,8 @@
             background-color: #0A0A0B;
             color: #ffffff;
             overflow-x: hidden;
+            width: 100%;
+            -webkit-tap-highlight-color: transparent;
         }
         .glass-panel {
             background: rgba(255, 255, 255, 0.03);
@@ -70,9 +72,27 @@
             animation: whatsapp-pulse 2s infinite;
         }
 
-        ::-webkit-scrollbar { width: 6px; }
+        ::-webkit-scrollbar { width: 4px; }
         ::-webkit-scrollbar-track { background: #0A0A0B; }
-        ::-webkit-scrollbar-thumb { background: #222; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb { background: #333; border-radius: 10px; }
+
+        /* Ensure smooth scrolling on iOS */
+        .custom-scrollbar {
+            -webkit-overflow-scrolling: touch;
+        }
+
+        /* Touch friendly buttons */
+        button, a, select, input {
+            min-height: 44px;
+        }
+
+        @media (max-width: 768px) {
+            .glass-panel {
+                border-radius: 1rem;
+            }
+            h1 { font-size: 1.75rem; }
+            h2 { font-size: 1.5rem; }
+        }
     </style>
 <script type="importmap">
 {
